# LLM-Factory

./: .coverage  .env.example  .gitignore  README.md  README_CN.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_api.py  test_basic.py  test_openai_only.py
examples/: api_usage.py  basic_usage.py
src/llm_factory/: __init__.py  factory.py  models.py
src/llm_factory/api/: __init__.py  __main__.py  app.py  routes.py
src/llm_factory/providers/: __init__.py  base.py  claude_provider.py  deepseek_provider.py  gemini_provider.py  openai_provider.py  qwen_provider.py
src/llm_factory/utils/: __init__.py  config.py  metrics.py  proxy.py
tests/: __init__.py  test_api.py  test_basic.py  test_factory.py  test_openai.py  test_providers.py
